--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
 ipykernel
 python-dotenv
+pandas 
+seaborn
+numpy
+matplotlib.pyplot
+click==8.1.3
+mlflow==2.15.1
+mlflow_skinny==2.15.1
+scikit_learn==1.3.2
+statsmodels==0.14.1
+zenml
+-e .cd
